--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,4 +12,6 @@ html
     .app-title.navigator.navbar-expand-md.navbar-light.bg-light
       .navbar-brand Taskleaf 
     .container
+      - if flash.notice.present?
+        .alert.alert-success= flash.notice
       = yield
