--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -17,4 +17,4 @@ h1 タスク一覧
             td
 							= link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
             td
-              = link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+              = button_to '削除', task_path(task), method: :delete, form: { data: { turbo_confirm: "タスク「#{task.name}」を削除します。よろしいですか？" }}, class: 'btn btn-danger'
